--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ nav {
   background-color: #293e60;
 }
 
+.right {
+  margin-right: 20px;
+  padding-right: 10px;
+}
+
 .brand-logo {
+  margin-left: 20px;
   padding-left: 10px; 
   text-align: center;
 }
@@ -26,7 +32,7 @@ nav {
 }
 
 .title {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .about {
